# engram

./: .gitignore  CHANGELOG.md  README.md  conftest.py  engram_article.docx  pyproject.toml  run_tests.py  setup_test_env.sh
apps/: __init__.py
apps/sandbox/: __init__.py  app.py  config_store.py  diagnostics_bridge.py  engine_factory.py  memory_inspector.py  model_management.py  runtime_manager.py  session_state.py
docs/: getting-started.md
docs/architecture/: adapter-boundaries.md  core-library.md  reference-app.md
docs/concepts/: memory-flow.md
docs/reference-app/: overview.md  runtime-management.md
docs/tutorials/: build-your-own-app.md  custom-engine-adapter.md
engram/: __init__.py  cli.py  project_memory.py
engram/adapters/: __init__.py  llm_adapter.py
engram/engine/: __init__.py  base.py  claude_engine.py  config_loader.py  discovery.py  gemini_engine.py  llama_cpp_engine.py  llm_engines.yaml  (+8 more)
engram_ui/: app.py
examples/: custom_engine_adapter.py  headless_chat.py  minimal_memory_runtime.py  quickstart.py
tests/: health_check.py  test_architecture_components.py  test_cloud_privacy.py  test_cold_storage_migrations.py  test_experiment_memory.py  test_experiment_memory_queries.py  test_llama_cpp_engine.py  test_multi_candidate_strategy.py  test_phase10_artifact_recommendation.py  test_phase2_memory_runtime.py  test_phase3_lifecycle_and_neural.py  test_phase4_runtime.py  test_phase6_retrieval_policy.py  test_phase7_eval_and_semantic.py  test_phase8_semantic_eval.py  test_phase8b_hf_search.py  test_phase9_hf_download.py  test_pressure_valve.py  test_project_memory_paths.py  test_project_memory_respond.py  test_propose_then_verify_strategy.py  test_regression_vllm_paths.py  test_retrieval_quality.py  test_rtrl_neural.py  test_run_reporting.py  test_strategy_runner.py
(+103 files in other folders)
